# core-cpp

./: CMakeLists.txt  README.md
include/Core/Container/: Array.h  ArrayPool.h  ArrayPoolConfig.h  ByteBuffer.h  Container.h  PointerArray.h  Pool.h  PriorityStack.h  RingArray.h  Stack.h
include/Core/Data/: DataReadSource.h  DataReader.h  DataSource.h  DataSourceArray.h  DataWriteSource.h  DataWriter.h
include/Core/IO/: FsUtil.h
include/Core/Iterator/: StreamIterator.h
include/Core/Memory/: SerializableMarkers.h  Serializer.h  SizeStream.h  Sizes.h  SpanReader.h  SpanWriter.h
include/Core/Std/: Util.h
include/Core/String/: StreamStringView.h  String.h  StringUtil.h
include/Core/Util/: AssertUtil.h  CircularCounter.h  ConfigFlags.h  ConfigUtil.h  ConvertUtil.h  Diffable.h  Enum.h  Macros.h  MarkerClass.h  MathHelpers.h  Result.h  Types.h
src/: CMakeLists.txt
src/IO/: FsUtil.cpp
src/Memory/: SpanReader.cpp
src/Util/: CircularCounter.cpp  ConfigUtil.cpp  Timer.cpp
src/include/Core/Container/: Array.h  ArrayPoolConfig.h  ArrayStack.h  Pool.h
src/include/Core/Memory/: StreamSpanView.h
src/include/Core/String/: FixedString.h  String.h  StringUtil.h
src/include/Core/Util/: CappedCounter.h  Macros.h  MathHelpers.h  Recursion.h  Singleton.h  StateMachine.h  Timer.h  Types.h
src/src/Container/: Array.cpp  Pool.cpp
src/src/Memory/: SpanWriter.cpp
src/src/Util/: CircularCounter.cpp  Timer.cpp
tests/: CMakeLists.txt  vcpkg.json
tests/include/Test/: TestUtil.h
tests/src/: main.test.cpp
tests/src/Container/: ArrayPoolTests.cpp  FixedArrayPoolTests.cpp  SequencedDictionaryTests.cpp
tests/src/Memory/: SpanReaderTests.cpp  SpanWriterTests.cpp
